Fix heading alignment: all left except About Me

--- a/style.css
+++ b/style.css
@@ -390,10 +390,14 @@ section h2 {
     margin-bottom: 20px;
     margin-top: 40px;
     padding-left: 20px;
-    text-align: left;
+    text-align: left !important;
 }
+section {
+    text-align: inherit;
+  }
+  
 #about h2 {
-    text-align: center;
+    text-align: center !important;
     padding-left: 0;
   }
   
